--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 66,
+      "line": 69,
       "column": 13,
-      "index": 3494
+      "index": 3641
     },
     "end": {
-      "line": 69,
+      "line": 72,
       "column": 3,
-      "index": 3567
+      "index": 3714
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 70,
+      "line": 73,
       "column": 13,
-      "index": 3582
+      "index": 3729
     },
     "end": {
-      "line": 73,
+      "line": 76,
       "column": 3,
-      "index": 3664
+      "index": 3811
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 74,
+      "line": 77,
       "column": 13,
-      "index": 3679
+      "index": 3826
     },
     "end": {
-      "line": 77,
+      "line": 80,
       "column": 3,
-      "index": 3758
+      "index": 3905
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 78,
+      "line": 81,
       "column": 16,
-      "index": 3776
+      "index": 3923
     },
     "end": {
-      "line": 81,
+      "line": 84,
       "column": 3,
-      "index": 3861
+      "index": 4008
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 85,
       "column": 15,
-      "index": 3878
+      "index": 4025
     },
     "end": {
-      "line": 85,
+      "line": 88,
       "column": 3,
-      "index": 3954
+      "index": 4101
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 89,
       "column": 12,
-      "index": 3968
+      "index": 4115
     },
     "end": {
-      "line": 89,
+      "line": 92,
       "column": 3,
-      "index": 4045
+      "index": 4192
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 93,
       "column": 10,
-      "index": 4057
+      "index": 4204
     },
     "end": {
-      "line": 93,
+      "line": 96,
       "column": 3,
-      "index": 4130
+      "index": 4277
     }
   },
   {
@@ -109,14 +109,29 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 97,
       "column": 18,
-      "index": 4150
+      "index": 4297
     },
     "end": {
-      "line": 97,
+      "line": 100,
       "column": 3,
-      "index": 4239
+      "index": 4386
+    }
+  },
+  {
+    "id": "swap.swapScreen.balance",
+    "defaultMessage": "!!!Balance",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 101,
+      "column": 11,
+      "index": 4399
+    },
+    "end": {
+      "line": 104,
+      "column": 3,
+      "index": 4473
     }
   },
   {
@@ -124,14 +139,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 105,
       "column": 15,
-      "index": 4256
+      "index": 4490
     },
     "end": {
-      "line": 101,
+      "line": 108,
       "column": 3,
-      "index": 4339
+      "index": 4573
     }
   },
   {
@@ -139,14 +154,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 109,
       "column": 15,
-      "index": 4356
+      "index": 4590
     },
     "end": {
-      "line": 105,
+      "line": 112,
       "column": 3,
-      "index": 4439
+      "index": 4673
     }
   },
   {
@@ -154,14 +169,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 106,
+      "line": 113,
       "column": 14,
-      "index": 4455
+      "index": 4689
     },
     "end": {
-      "line": 109,
+      "line": 116,
       "column": 3,
-      "index": 4536
+      "index": 4770
     }
   },
   {
@@ -169,14 +184,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 110,
+      "line": 117,
       "column": 21,
-      "index": 4559
+      "index": 4793
     },
     "end": {
-      "line": 113,
+      "line": 120,
       "column": 3,
-      "index": 4654
+      "index": 4888
     }
   },
   {
@@ -184,14 +199,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 114,
+      "line": 121,
       "column": 25,
-      "index": 4681
+      "index": 4915
     },
     "end": {
-      "line": 117,
+      "line": 124,
       "column": 3,
-      "index": 4785
+      "index": 5019
     }
   },
   {
@@ -199,14 +214,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 118,
+      "line": 125,
       "column": 14,
-      "index": 4801
+      "index": 5035
     },
     "end": {
-      "line": 121,
+      "line": 128,
       "column": 3,
-      "index": 4889
+      "index": 5123
     }
   },
   {
@@ -214,14 +229,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 122,
+      "line": 129,
       "column": 12,
-      "index": 4903
+      "index": 5137
     },
     "end": {
-      "line": 125,
+      "line": 132,
       "column": 3,
-      "index": 5001
+      "index": 5235
     }
   },
   {
@@ -229,14 +244,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 126,
+      "line": 133,
       "column": 19,
-      "index": 5022
+      "index": 5256
     },
     "end": {
-      "line": 129,
+      "line": 136,
       "column": 3,
-      "index": 5123
+      "index": 5357
     }
   },
   {
@@ -244,14 +259,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 130,
+      "line": 137,
       "column": 16,
-      "index": 5141
+      "index": 5375
     },
     "end": {
-      "line": 133,
+      "line": 140,
       "column": 3,
-      "index": 5279
+      "index": 5513
     }
   },
   {
@@ -259,14 +274,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 134,
+      "line": 141,
       "column": 14,
-      "index": 5295
+      "index": 5529
     },
     "end": {
-      "line": 138,
+      "line": 145,
       "column": 3,
-      "index": 5476
+      "index": 5710
     }
   },
   {
@@ -274,14 +289,14 @@
     "defaultMessage": "!!!Min ADA",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 139,
+      "line": 146,
       "column": 19,
-      "index": 5497
+      "index": 5731
     },
     "end": {
-      "line": 142,
+      "line": 149,
       "column": 3,
-      "index": 5579
+      "index": 5813
     }
   },
   {
@@ -289,14 +304,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 143,
+      "line": 150,
       "column": 12,
-      "index": 5593
+      "index": 5827
     },
     "end": {
-      "line": 146,
+      "line": 153,
       "column": 3,
-      "index": 5756
+      "index": 5990
     }
   },
   {
@@ -304,14 +319,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 147,
+      "line": 154,
       "column": 17,
-      "index": 5775
+      "index": 6009
     },
     "end": {
-      "line": 150,
+      "line": 157,
       "column": 3,
-      "index": 5851
+      "index": 6085
     }
   },
   {
@@ -319,14 +334,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 151,
+      "line": 158,
       "column": 19,
-      "index": 5872
+      "index": 6106
     },
     "end": {
-      "line": 154,
+      "line": 161,
       "column": 3,
-      "index": 6018
+      "index": 6252
     }
   },
   {
@@ -334,14 +349,14 @@
     "defaultMessage": "!!!Min Received",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 162,
       "column": 24,
-      "index": 6044
+      "index": 6278
     },
     "end": {
-      "line": 158,
+      "line": 165,
       "column": 3,
-      "index": 6136
+      "index": 6370
     }
   },
   {
@@ -349,14 +364,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 166,
       "column": 17,
-      "index": 6155
+      "index": 6389
     },
     "end": {
-      "line": 162,
+      "line": 169,
       "column": 3,
-      "index": 6293
+      "index": 6527
     }
   },
   {
@@ -364,14 +379,29 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 170,
       "column": 20,
-      "index": 6315
+      "index": 6549
     },
     "end": {
-      "line": 166,
+      "line": 173,
       "column": 3,
-      "index": 6410
+      "index": 6644
+    }
+  },
+  {
+    "id": "swap.swapScreen.volume",
+    "defaultMessage": "!!!Volume, 24h",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 174,
+      "column": 10,
+      "index": 6656
+    },
+    "end": {
+      "line": 177,
+      "column": 3,
+      "index": 6733
     }
   },
   {
@@ -379,14 +409,14 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 178,
       "column": 24,
-      "index": 6436
+      "index": 6759
     },
     "end": {
-      "line": 171,
+      "line": 182,
       "column": 3,
-      "index": 6718
+      "index": 7041
     }
   },
   {
@@ -394,14 +424,14 @@
     "defaultMessage": "!!! Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 172,
+      "line": 183,
       "column": 9,
-      "index": 6729
+      "index": 7052
     },
     "end": {
-      "line": 175,
+      "line": 186,
       "column": 3,
-      "index": 6791
+      "index": 7114
     }
   },
   {
@@ -409,14 +439,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 176,
+      "line": 187,
       "column": 17,
-      "index": 6810
+      "index": 7133
     },
     "end": {
-      "line": 179,
+      "line": 190,
       "column": 3,
-      "index": 6912
+      "index": 7235
     }
   },
   {
@@ -424,14 +454,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 180,
+      "line": 191,
       "column": 21,
-      "index": 6935
+      "index": 7258
     },
     "end": {
-      "line": 183,
+      "line": 194,
       "column": 3,
-      "index": 7037
+      "index": 7360
     }
   },
   {
@@ -439,14 +469,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 184,
+      "line": 195,
       "column": 17,
-      "index": 7056
+      "index": 7379
     },
     "end": {
-      "line": 187,
+      "line": 198,
       "column": 3,
-      "index": 7143
+      "index": 7466
     }
   },
   {
@@ -454,14 +484,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 188,
+      "line": 199,
       "column": 14,
-      "index": 7159
+      "index": 7482
     },
     "end": {
-      "line": 191,
+      "line": 202,
       "column": 3,
-      "index": 7240
+      "index": 7563
     }
   },
   {
@@ -469,14 +499,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 192,
+      "line": 203,
       "column": 19,
-      "index": 7261
+      "index": 7584
     },
     "end": {
-      "line": 195,
+      "line": 206,
       "column": 3,
-      "index": 7352
+      "index": 7675
     }
   },
   {
@@ -484,14 +514,14 @@
     "defaultMessage": "!!!TVL",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 196,
+      "line": 207,
       "column": 7,
-      "index": 7361
+      "index": 7684
     },
     "end": {
-      "line": 199,
+      "line": 210,
       "column": 3,
-      "index": 7427
+      "index": 7750
     }
   },
   {
@@ -499,14 +529,14 @@
     "defaultMessage": "!!! Pool Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 200,
+      "line": 211,
       "column": 11,
-      "index": 7440
+      "index": 7763
     },
     "end": {
-      "line": 203,
+      "line": 214,
       "column": 3,
-      "index": 7516
+      "index": 7839
     }
   },
   {
@@ -514,14 +544,14 @@
     "defaultMessage": "!!! Batcher Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 204,
+      "line": 215,
       "column": 14,
-      "index": 7532
+      "index": 7855
     },
     "end": {
-      "line": 207,
+      "line": 218,
       "column": 3,
-      "index": 7614
+      "index": 7937
     }
   },
   {
@@ -529,14 +559,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 208,
+      "line": 219,
       "column": 9,
-      "index": 7625
+      "index": 7948
     },
     "end": {
-      "line": 211,
+      "line": 222,
       "column": 3,
-      "index": 7698
+      "index": 8021
     }
   },
   {
@@ -544,14 +574,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 212,
+      "line": 223,
       "column": 9,
-      "index": 7709
+      "index": 8032
     },
     "end": {
-      "line": 215,
+      "line": 226,
       "column": 3,
-      "index": 7770
+      "index": 8093
     }
   },
   {
@@ -559,14 +589,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 216,
+      "line": 227,
       "column": 19,
-      "index": 7791
+      "index": 8114
     },
     "end": {
-      "line": 219,
+      "line": 230,
       "column": 3,
-      "index": 7873
+      "index": 8196
     }
   },
   {
@@ -574,14 +604,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 220,
+      "line": 231,
       "column": 20,
-      "index": 7895
+      "index": 8218
     },
     "end": {
-      "line": 223,
+      "line": 234,
       "column": 3,
-      "index": 7979
+      "index": 8302
     }
   },
   {
@@ -589,14 +619,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 224,
+      "line": 235,
       "column": 25,
-      "index": 8006
+      "index": 8329
     },
     "end": {
-      "line": 227,
+      "line": 238,
       "column": 3,
-      "index": 8126
+      "index": 8449
     }
   },
   {
@@ -604,14 +634,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 228,
+      "line": 239,
       "column": 8,
-      "index": 8136
+      "index": 8459
     },
     "end": {
-      "line": 231,
+      "line": 242,
       "column": 3,
-      "index": 8195
+      "index": 8518
     }
   },
   {
@@ -619,14 +649,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 232,
+      "line": 243,
       "column": 14,
-      "index": 8211
+      "index": 8534
     },
     "end": {
-      "line": 235,
+      "line": 246,
       "column": 3,
-      "index": 8270
+      "index": 8593
     }
   },
   {
@@ -634,14 +664,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 238,
+      "line": 249,
       "column": 11,
-      "index": 8329
+      "index": 8652
     },
     "end": {
-      "line": 241,
+      "line": 252,
       "column": 3,
-      "index": 8424
+      "index": 8747
     }
   },
   {
@@ -649,14 +679,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 242,
+      "line": 253,
       "column": 12,
-      "index": 8438
+      "index": 8761
     },
     "end": {
-      "line": 245,
+      "line": 256,
       "column": 3,
-      "index": 8541
+      "index": 8864
     }
   },
   {
@@ -664,14 +694,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 246,
+      "line": 257,
       "column": 9,
-      "index": 8552
+      "index": 8875
     },
     "end": {
-      "line": 249,
+      "line": 260,
       "column": 3,
-      "index": 8642
+      "index": 8965
     }
   },
   {
@@ -679,14 +709,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 250,
+      "line": 261,
       "column": 16,
-      "index": 8660
+      "index": 8983
     },
     "end": {
-      "line": 253,
+      "line": 264,
       "column": 3,
-      "index": 8756
+      "index": 9079
     }
   },
   {
@@ -694,14 +724,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 254,
+      "line": 265,
       "column": 20,
-      "index": 8778
+      "index": 9101
     },
     "end": {
-      "line": 257,
+      "line": 268,
       "column": 3,
-      "index": 8867
+      "index": 9190
     }
   },
   {
@@ -709,14 +739,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 258,
+      "line": 269,
       "column": 11,
-      "index": 8880
+      "index": 9203
     },
     "end": {
-      "line": 261,
+      "line": 272,
       "column": 3,
-      "index": 8974
+      "index": 9297
     }
   }
 ]
