--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 61,
+      "line": 68,
       "column": 13,
-      "index": 3243
+      "index": 3590
     },
     "end": {
-      "line": 64,
+      "line": 71,
       "column": 3,
-      "index": 3316
+      "index": 3663
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 65,
+      "line": 72,
       "column": 13,
-      "index": 3331
+      "index": 3678
     },
     "end": {
-      "line": 68,
+      "line": 75,
       "column": 3,
-      "index": 3413
+      "index": 3760
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 76,
       "column": 13,
-      "index": 3428
+      "index": 3775
     },
     "end": {
-      "line": 72,
+      "line": 79,
       "column": 3,
-      "index": 3507
+      "index": 3854
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 80,
       "column": 16,
-      "index": 3525
+      "index": 3872
     },
     "end": {
-      "line": 76,
+      "line": 83,
       "column": 3,
-      "index": 3610
+      "index": 3957
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 84,
       "column": 15,
-      "index": 3627
+      "index": 3974
     },
     "end": {
-      "line": 80,
+      "line": 87,
       "column": 3,
-      "index": 3703
+      "index": 4050
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 88,
       "column": 12,
-      "index": 3717
+      "index": 4064
     },
     "end": {
-      "line": 84,
+      "line": 91,
       "column": 3,
-      "index": 3794
+      "index": 4141
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 92,
       "column": 10,
-      "index": 3806
+      "index": 4153
     },
     "end": {
-      "line": 88,
+      "line": 95,
       "column": 3,
-      "index": 3879
+      "index": 4226
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 96,
       "column": 18,
-      "index": 3899
+      "index": 4246
     },
     "end": {
-      "line": 92,
+      "line": 99,
       "column": 3,
-      "index": 3988
+      "index": 4335
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 100,
       "column": 15,
-      "index": 4005
+      "index": 4352
     },
     "end": {
-      "line": 96,
+      "line": 103,
       "column": 3,
-      "index": 4088
+      "index": 4435
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 104,
       "column": 15,
-      "index": 4105
+      "index": 4452
     },
     "end": {
-      "line": 100,
+      "line": 107,
       "column": 3,
-      "index": 4188
+      "index": 4535
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 108,
       "column": 14,
-      "index": 4204
+      "index": 4551
     },
     "end": {
-      "line": 104,
+      "line": 111,
       "column": 3,
-      "index": 4285
+      "index": 4632
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 112,
       "column": 21,
-      "index": 4308
+      "index": 4655
     },
     "end": {
-      "line": 108,
+      "line": 115,
       "column": 3,
-      "index": 4403
+      "index": 4750
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 116,
       "column": 25,
-      "index": 4430
+      "index": 4777
     },
     "end": {
-      "line": 112,
+      "line": 119,
       "column": 3,
-      "index": 4534
+      "index": 4881
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 120,
       "column": 14,
-      "index": 4550
+      "index": 4897
     },
     "end": {
-      "line": 116,
+      "line": 123,
       "column": 3,
-      "index": 4638
+      "index": 4985
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 117,
+      "line": 124,
       "column": 12,
-      "index": 4652
+      "index": 4999
     },
     "end": {
-      "line": 120,
+      "line": 127,
       "column": 3,
-      "index": 4750
+      "index": 5097
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 121,
+      "line": 128,
       "column": 19,
-      "index": 4771
+      "index": 5118
     },
     "end": {
-      "line": 124,
+      "line": 131,
       "column": 3,
-      "index": 4872
+      "index": 5219
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 132,
       "column": 16,
-      "index": 4890
+      "index": 5237
     },
     "end": {
-      "line": 128,
+      "line": 135,
       "column": 3,
-      "index": 5028
+      "index": 5375
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 136,
       "column": 14,
-      "index": 5044
+      "index": 5391
     },
     "end": {
-      "line": 133,
+      "line": 140,
       "column": 3,
-      "index": 5225
+      "index": 5572
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Min ADA",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 134,
+      "line": 141,
       "column": 19,
-      "index": 5246
+      "index": 5593
     },
     "end": {
-      "line": 146,
+      "line": 144,
       "column": 3,
-      "index": 5328
+      "index": 5675
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 145,
       "column": 12,
-      "index": 5342
+      "index": 5689
     },
     "end": {
-      "line": 141,
+      "line": 148,
       "column": 3,
-      "index": 5505
+      "index": 5852
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 149,
       "column": 17,
-      "index": 5524
+      "index": 5871
     },
     "end": {
-      "line": 145,
+      "line": 152,
       "column": 3,
-      "index": 5600
+      "index": 5947
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 153,
       "column": 19,
-      "index": 5621
+      "index": 5968
     },
     "end": {
-      "line": 149,
+      "line": 156,
       "column": 3,
-      "index": 5767
+      "index": 6114
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Min Received",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 157,
       "column": 24,
-      "index": 5793
+      "index": 6140
     },
     "end": {
-      "line": 153,
+      "line": 160,
       "column": 3,
-      "index": 5885
+      "index": 6232
     }
   },
   {
@@ -349,14 +349,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 154,
+      "line": 161,
       "column": 17,
-      "index": 5904
+      "index": 6251
     },
     "end": {
-      "line": 157,
+      "line": 164,
       "column": 3,
-      "index": 6042
+      "index": 6389
     }
   },
   {
@@ -364,14 +364,29 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 158,
+      "line": 165,
       "column": 20,
-      "index": 6064
+      "index": 6411
     },
     "end": {
-      "line": 161,
+      "line": 168,
       "column": 3,
-      "index": 6159
+      "index": 6506
+    }
+  },
+  {
+    "id": "swap.swapScreen.volume",
+    "defaultMessage": "!!!Volume, 24h",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 169,
+      "column": 10,
+      "index": 6518
+    },
+    "end": {
+      "line": 172,
+      "column": 3,
+      "index": 6595
     }
   },
   {
@@ -379,14 +394,29 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 162,
+      "line": 173,
       "column": 24,
-      "index": 6185
+      "index": 6621
     },
     "end": {
-      "line": 166,
+      "line": 177,
       "column": 3,
-      "index": 6467
+      "index": 6903
+    }
+  },
+  {
+    "id": "global,price",
+    "defaultMessage": "!!! Price",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 178,
+      "column": 9,
+      "index": 6914
+    },
+    "end": {
+      "line": 181,
+      "column": 3,
+      "index": 6976
     }
   },
   {
@@ -394,14 +424,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 182,
       "column": 17,
-      "index": 6486
+      "index": 6995
     },
     "end": {
-      "line": 170,
+      "line": 185,
       "column": 3,
-      "index": 6588
+      "index": 7097
     }
   },
   {
@@ -409,14 +439,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 186,
       "column": 21,
-      "index": 6611
+      "index": 7120
     },
     "end": {
-      "line": 174,
+      "line": 189,
       "column": 3,
-      "index": 6713
+      "index": 7222
     }
   },
   {
@@ -424,14 +454,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 190,
       "column": 17,
-      "index": 6732
+      "index": 7241
     },
     "end": {
-      "line": 178,
+      "line": 193,
       "column": 3,
-      "index": 6819
+      "index": 7328
     }
   },
   {
@@ -439,14 +469,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 194,
       "column": 14,
-      "index": 6835
+      "index": 7344
     },
     "end": {
-      "line": 182,
+      "line": 197,
       "column": 3,
-      "index": 6916
+      "index": 7425
     }
   },
   {
@@ -454,14 +484,59 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 198,
       "column": 19,
-      "index": 6937
+      "index": 7446
     },
     "end": {
-      "line": 186,
+      "line": 201,
       "column": 3,
-      "index": 7028
+      "index": 7537
+    }
+  },
+  {
+    "id": "swap.swapScreen.tvl",
+    "defaultMessage": "!!!TVL",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 202,
+      "column": 7,
+      "index": 7546
+    },
+    "end": {
+      "line": 205,
+      "column": 3,
+      "index": 7612
+    }
+  },
+  {
+    "id": "swap.swapScreen.poolFee",
+    "defaultMessage": "!!! Pool Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 206,
+      "column": 11,
+      "index": 7625
+    },
+    "end": {
+      "line": 209,
+      "column": 3,
+      "index": 7701
+    }
+  },
+  {
+    "id": "swap.swapScreen.batcherFee",
+    "defaultMessage": "!!! Batcher Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 210,
+      "column": 14,
+      "index": 7717
+    },
+    "end": {
+      "line": 213,
+      "column": 3,
+      "index": 7799
     }
   },
   {
@@ -469,14 +544,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 214,
       "column": 9,
-      "index": 7039
+      "index": 7810
     },
     "end": {
-      "line": 190,
+      "line": 217,
       "column": 3,
-      "index": 7112
+      "index": 7883
     }
   },
   {
@@ -484,14 +559,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 218,
       "column": 9,
-      "index": 7123
+      "index": 7894
     },
     "end": {
-      "line": 194,
+      "line": 221,
       "column": 3,
-      "index": 7184
+      "index": 7955
     }
   },
   {
@@ -499,14 +574,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 222,
       "column": 19,
-      "index": 7205
+      "index": 7976
     },
     "end": {
-      "line": 198,
+      "line": 225,
       "column": 3,
-      "index": 7287
+      "index": 8058
     }
   },
   {
@@ -514,14 +589,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 226,
       "column": 20,
-      "index": 7309
+      "index": 8080
     },
     "end": {
-      "line": 202,
+      "line": 229,
       "column": 3,
-      "index": 7393
+      "index": 8164
     }
   },
   {
@@ -529,14 +604,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 203,
+      "line": 230,
       "column": 25,
-      "index": 7420
+      "index": 8191
     },
     "end": {
-      "line": 206,
+      "line": 233,
       "column": 3,
-      "index": 7540
+      "index": 8311
     }
   },
   {
@@ -544,14 +619,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 207,
+      "line": 234,
       "column": 8,
-      "index": 7550
+      "index": 8321
     },
     "end": {
-      "line": 210,
+      "line": 237,
       "column": 3,
-      "index": 7609
+      "index": 8380
     }
   },
   {
@@ -559,14 +634,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 211,
+      "line": 238,
       "column": 14,
-      "index": 7625
+      "index": 8396
     },
     "end": {
-      "line": 214,
+      "line": 241,
       "column": 3,
-      "index": 7684
+      "index": 8455
     }
   },
   {
@@ -574,14 +649,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 244,
       "column": 11,
-      "index": 7743
+      "index": 8514
     },
     "end": {
-      "line": 220,
+      "line": 247,
       "column": 3,
-      "index": 7838
+      "index": 8609
     }
   },
   {
@@ -589,14 +664,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 221,
+      "line": 248,
       "column": 12,
-      "index": 7852
+      "index": 8623
     },
     "end": {
-      "line": 224,
+      "line": 251,
       "column": 3,
-      "index": 7955
+      "index": 8726
     }
   },
   {
@@ -604,14 +679,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 225,
+      "line": 252,
       "column": 9,
-      "index": 7966
+      "index": 8737
     },
     "end": {
-      "line": 228,
+      "line": 255,
       "column": 3,
-      "index": 8056
+      "index": 8827
     }
   },
   {
@@ -619,14 +694,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 229,
+      "line": 256,
       "column": 16,
-      "index": 8074
+      "index": 8845
     },
     "end": {
-      "line": 232,
+      "line": 259,
       "column": 3,
-      "index": 8170
+      "index": 8941
     }
   },
   {
@@ -634,14 +709,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 233,
+      "line": 260,
       "column": 20,
-      "index": 8192
+      "index": 8963
     },
     "end": {
-      "line": 236,
+      "line": 263,
       "column": 3,
-      "index": 8281
+      "index": 9052
     }
   },
   {
@@ -649,14 +724,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 237,
+      "line": 264,
       "column": 11,
-      "index": 8294
+      "index": 9065
     },
     "end": {
-      "line": 240,
+      "line": 267,
       "column": 3,
-      "index": 8388
+      "index": 9159
     }
   }
 ]
